k8s/ingress/otel-collector.yaml
# 1. Este é o seu Serviço (A "porta" de entrada para o banco)
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  ports:
  - port: 5432
    targetPort: 5432
---
# 2. Este é o seu Deployment (O "motor" que roda o Postgres)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
spec:
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
        - containerPort: 5432
